Remove project and product links; Modify variable names; modify header styles.

--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -23,7 +23,7 @@
 
 .Circle {
   border-radius: 50%;
-  background-color: $theme-color-primary-v6;
+  background-color: $theme-primary-v6;
   height: 80px;
   width: 80px;
 }
