--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -115,7 +115,7 @@
 .contact-info-col {
   font-size: 0.9rem;
   color: white;
-  background-color: $theme-color-primary-v4;
+  background-color: $theme-primary-v4;
 }
 
 @keyframes fromBottom {
