--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -2,7 +2,7 @@
 
 .Footer-Wrapper-One {
   height: 10rem;
-  background-color: $theme-color-primary-v5;
+  background-color: $theme-primary-v5;
 }
 
 .Footer-Wrapper-Two {
@@ -10,7 +10,7 @@
   color: #ffffff;
   text-align: left;
   font-size: 0.8rem;
-  background-color: $theme-color-primary-v4;
+  background-color: $theme-primary-v4;
 }
 
 .Footer-Image {
