--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,48 +1,48 @@
-$theme-color-primary-faint: rgba(157, 113, 65, 0.25);
+$theme-primary-faint: rgba(157, 113, 65, 0.25);
 
 // the -v5's are the actual colors. Colors above them are the darker variants while those below lighter
 
-$theme-color-primary: rgb(157, 113, 65); //supposed gold color
+$theme-primary: rgb(157, 113, 65); //supposed gold color
 $prim-r: 157;
 $prim-g: 113;
 $prim-b: 65;
-$theme-color-primary-v1: rgb(
+$theme-primary-v1: rgb(
   $prim-r - (24 * 4),
   $prim-g - (24 * 4),
   $prim-b - (24 * 4)
 );
-$theme-color-primary-v2: rgb(
+$theme-primary-v2: rgb(
   $prim-r - (24 * 3),
   $prim-g - (24 * 3),
   $prim-b - (24 * 3)
 );
-$theme-color-primary-v3: rgb(
+$theme-primary-v3: rgb(
   $prim-r - (24 * 2),
   $prim-g - (24 * 2),
   $prim-b - (24 * 2)
 );
-$theme-color-primary-v4: rgb(
+$theme-primary-v4: rgb(
   $prim-r - (24 * 1),
   $prim-g - (24 * 1),
   $prim-b - (24 * 1)
 );
-$theme-color-primary-v5: rgb($prim-r, $prim-g, $prim-b);
-$theme-color-primary-v6: rgb(
+$theme-primary-v5: rgb($prim-r, $prim-g, $prim-b);
+$theme-primary-v6: rgb(
   $prim-r + (24 * 1),
   $prim-g + (24 * 1),
   $prim-b + (24 * 1)
 );
-$theme-color-primary-v7: rgb(
+$theme-primary-v7: rgb(
   $prim-r + (24 * 2),
   $prim-g + (24 * 2),
   $prim-b + (24 * 2)
 );
-$theme-color-primary-v8: rgb(
+$theme-primary-v8: rgb(
   $prim-r + (24 * 3),
   $prim-g + (24 * 3),
   $prim-b + (24 * 3)
 );
-$theme-color-primary-v9: rgb(
+$theme-primary-v9: rgb(
   $prim-r + (24 * 4),
   $prim-g + (24 * 4),
   $prim-b + (24 * 4)
