--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -41,7 +41,7 @@ body {
       }
 
       &::-webkit-scrollbar-thumb {
-        background: $theme-color-primary !important;
+        background: $theme-primary !important;
       }
     }
   }
@@ -74,10 +74,10 @@ input {
 }
 
 a {
-  color: $theme-color-primary-v8;
+  color: $theme-primary-v8;
 
   &:visited {
-    color: $theme-color-primary-v9;
+    color: $theme-primary-v9;
   }
 }
 
@@ -87,17 +87,34 @@ a {
   font-size: 1rem;
 
   &[class*='Primary'] {
+    $bg: $theme-primary-v4;
+    $bg-hovered: $theme-primary-v3;
+
     min-height: 2.5rem;
     border-radius: 0.25rem;
-    background-color: $theme-color-primary-v4;
-    color: white;
 
     &.major-button {
       border-radius: 1.75rem;
       height: 3rem;
+    }
+
+    &.contained {
+      background-color: $bg;
+      color: white;
 
       &:hover {
-        background-color: $theme-color-primary-v3;
+        background-color: $bg-hovered;
+      }
+    }
+
+    &.outlined {
+      border: 1px solid $bg;
+      background-color: transparent;
+      color: $theme-primary-v4;
+
+      &:hover {
+        background-color: $bg;
+        color: white;
       }
     }
 
@@ -114,7 +131,7 @@ hr {
   height: 0.2rem;
   border-radius: 0.1rem;
   border: none;
-  background: $theme-color-primary;
+  background: $theme-primary;
 }
 
 button,
@@ -133,11 +150,11 @@ h6 {
 
 .logo {
   color: white !important;
-  padding: 0.25rem;
+  padding: 0;
   display: block;
   font-size: 1.25rem;
   border-radius: 2rem;
-  min-width: 14rem;
+  min-width: 10rem;
   margin-left: -0.2rem !important;
   border: 1px solid transparent;
 
@@ -153,19 +170,19 @@ h6 {
   }
 
   &:focus-within {
-    border: 1px solid $theme-color-primary-v8;
+    border: 1px solid $theme-primary-v8;
   }
 }
 
 .theme-color-text {
-  color: $theme-color-primary;
+  color: $theme-primary;
 }
 .theme-color-text-lightest {
-  color: $theme-color-primary-v9;
+  color: $theme-primary-v9;
 }
 
 .theme-color-bg {
-  background-color: $theme-color-primary;
+  background-color: $theme-primary;
 }
 
 [class^='MuiFormControl'],
@@ -189,7 +206,7 @@ div {
     }
 
     &::after {
-      border-color: $theme-color-primary;
+      border-color: $theme-primary;
     }
 
     &:hover {
@@ -200,7 +217,7 @@ div {
   }
 
   .Mui-focused {
-    color: $theme-color-primary !important;
+    color: $theme-primary !important;
   }
 
   .Mui-disabled {
