Modify navigation bar and redirection for different companies.

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -25,6 +25,7 @@
   background: $theme-primary-v3;
   color: $theme-primary-v8;
   font-size: 0.85rem;
+  transition: 0.35s;
 
   span:first-of-type {
     display: inline-block;
