--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,9 @@
 @import 'misc';
 @import 'App';
-@import 'Header';
+@import 'Nav';
 @import 'Contact';
 @import 'Landing';
+@import 'Footer';
+@import 'Companies';
 @import 'responsive';
 @import 'animation';
-@import 'Footer';
