--- a/src/styles/_Companies.scss
+++ b/src/styles/_Companies.scss
@@ -12,11 +12,11 @@ body.companies {
   }
 
   .MuiAppBar-root {
-    background-color: $theme-secondary-v3;
+    background-color: $theme-secondary-v2;
   }
 
   .top-nav-box {
-    background: $theme-secondary-v2;
+    background: $theme-secondary-v1;
     color: $theme-secondary-v8;
 
     span:first-of-type {
@@ -29,7 +29,7 @@ body.companies {
 
     &::before,
     &::after {
-      background-color: $theme-secondary-v5;
+      background-color: $theme-secondary-v4;
     }
 
     &::before {
@@ -41,22 +41,23 @@ body.companies {
       color: #fff !important;
 
       &::before {
-        border-bottom-color: $theme-secondary-v7 !important;
+        border-bottom-color: $theme-secondary-v4 !important;
       }
     }
   }
 
   .nav-menu {
-    background-color: $theme-secondary-v7;
+    // box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    background-color: $theme-secondary-v4;
 
     a {
-      color: $theme-secondary-v3;
-      background: $theme-secondary-v9;
+      color: $theme-secondary-v9;
+      background: $theme-secondary-v2;
 
       &:hover,
       &:focus {
-        color: $theme-secondary-v9;
-        background: $theme-secondary-v3 !important;
+        color: $theme-secondary-v2;
+        background: $theme-secondary-v9 !important;
       }
     }
 
@@ -73,20 +74,24 @@ body.companies {
   }
 
   .MuiDrawer-paper {
-    background: $theme-secondary-v4;
+    background: $theme-secondary-v2;
   }
 
   .Footer-Wrapper-One {
-    background-color: $theme-secondary-v5;
+    background-color: $theme-secondary-v4;
   }
   
   .Footer-Wrapper-Two {
-    background-color: $theme-secondary-v4;
+    background-color: $theme-secondary-v3;
   }
 
   .logo {
     &:focus-within {
       border: 1px solid $theme-secondary-v8;
+    }
+
+    img {
+      filter: grayscale(100%);
     }
   }
 }
