--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -150,12 +150,13 @@ h6 {
 
 .logo {
   color: white !important;
-  padding: 0;
+  padding: 0.25em;
   display: block;
   font-size: 1.25rem;
   border-radius: 2rem;
   min-width: 10rem;
-  margin-left: -0.2rem !important;
+  margin: 0.35rem 0 !important;
+  margin-left: -0.35rem !important;
   border: 1px solid transparent;
 
   img {
