Add make order and make enquiry buttons for respective companies.

--- a/src/styles/_Companies.scss
+++ b/src/styles/_Companies.scss
@@ -1,6 +1,8 @@
 @import 'constants';
 
 body.companies {
+  background-color: white;
+  /*
   &.desktop {
     &.custom-scroll-bar,
     .custom-scroll-bar {
@@ -93,5 +95,5 @@ body.companies {
     img {
       filter: grayscale(100%);
     }
-  }
+  }*/
 }
