--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -5,7 +5,7 @@
   transition: 0.5s;
   width: 100%;
   left: 0;
-  box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.35);
 }
 
 .nav-toolbar {
@@ -73,7 +73,7 @@
   height: 100%;
   margin: 0 1rem;
   padding: 1.5rem 0.5rem;
-  color: $theme-primary-v9 !important;
+  color: $theme-primary-v9;
   z-index: 2;
   text-transform: capitalize !important;
   transition: 0.3s;
@@ -135,6 +135,37 @@
 
     .nav-icon {
       opacity: 0.85;
+    }
+  }
+
+  &.button {
+    background-color: rgb(36, 130, 133);
+    color: white;
+    // font-weight: 500;
+    display: inline-flex;
+    justify-content: center;
+    height: 2.75rem;
+    margin-left: 2rem;
+    border: 0.125rem solid white;
+    padding: 1.25rem 1rem;
+    border-radius: 2rem !important;
+    align-self: center;
+
+    &:last-child {
+      margin-right: 0.15rem;
+    }
+
+    &::before,
+    &::after {
+      content: unset;
+    }
+
+    &:hover {
+      background-color: rgb(16, 100, 103);
+    }
+
+    &.active {
+      background-color: transparent;
     }
   }
 }
@@ -241,6 +272,12 @@
     padding: 0.85rem;
     margin: 0 0.5rem;
     margin-top: 0.5rem;
+
+    &.button {
+      &:last-child {
+        margin: 3rem 1rem;
+      }
+    }
 
     &:focus,
     &:hover {
