--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -8,7 +8,11 @@
       display: flex;
     }
 
-    .app-bar-links {
+    // .app-bar-links {
+    //   display: none;
+    // }
+
+    .nav-link-wrapper {
       display: none;
     }
   }
@@ -26,7 +30,11 @@
     display: flex;
   }
 
-  .app-bar-links {
+  // .app-bar-links {
+  //   display: none;
+  // }
+
+  .nav-link-wrapper {
     display: none;
   }
 }
@@ -37,7 +45,11 @@
       display: none;
     }
 
-    .app-bar-links {
+    // .app-bar-links {
+    //   display: flex;
+    // }
+
+    .nav-link-wrapper {
       display: flex;
     }
   }
@@ -48,6 +60,34 @@
     padding: {
       left: 2.5rem;
       right: 2.5rem;
+    }
+  }
+
+  body.companies {
+    .nav-link-wrapper {
+      &:last-child {
+        display: flex;
+      }
+
+      @media screen and (max-width: 480px) {
+        .long-desc {
+          display: none;
+        }
+
+        .short-desc {
+          display: initial;
+        }
+        
+        .nav-link.button {
+          margin: 0;
+        }
+      }
+
+      @media screen and (max-width: 410px) {
+        &:last-child {
+          display: none;
+        }
+      }
     }
   }
 }
