Add loader anim to engage user on load of app.

--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -30,6 +30,10 @@ body {
   overflow: auto !important;
 
   &.desktop {
+    [class*=PrivateSwipeArea] {
+      display: none;
+    }
+    
     &.custom-scroll-bar,
     .custom-scroll-bar {
       &::-webkit-scrollbar {
