--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -144,7 +144,7 @@
   }
 
   &.button {
-    background-color: #000;
+    background-color: #111;
     color: white;
     display: inline-flex;
     justify-content: center;
@@ -289,6 +289,14 @@
     &.button {
       &:last-child {
         margin: 3rem 1rem !important;
+      }
+
+      .long-desc {
+        display: initial;
+      }
+      
+      .short-desc {
+        display: none;
       }
     }
 
