--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -1,28 +1,34 @@
-.Product-Wrapper {
-//   height: 30rem;
-padding-top: 2rem;
-padding-bottom: 2rem;
-  width: 100%;
-  background: linear-gradient(rgba(65, 20, 20, 0.50), rgba(31, 5, 5, 0.5)),
-    url("/images/two.jpg");
-  object-fit: cover;
-  background-position: center;
-  line-height: 1.7;
+$products: (
+  "one": "/images/one.jpg",
+  "two": "/images/two.jpg",
+  "three": "/images/three.jpg",
+);
+
+@each $i, $image in $products {
+  .Product-Wrapper-#{$i} {
+    //   height: 30rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%;
+    background: linear-gradient(rgba(65, 20, 20, 0.5), rgba(31, 5, 5, 0.5)),
+      url($image);
+    object-fit: cover;
+    background-position: center;
+    line-height: 1.7;
     // filter: blur(.9em);
-}
-
-.Main-Wrapper {
-  width: 100% !important;
-}
-
-.Product-Image{
-    background: url("/images/two.jpg");
+  }
+  .Product-Image-#{$i} {
+    background: url($image);
     height: 15rem;
     width: 15rem;
     margin: 1rem;
     object-fit: cover;
     background-position: center;
     border-radius: 50%;
-    box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, .3);
+    box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.3);
+  }
+}
 
+.Main-Wrapper {
+  width: 100% !important;
 }
