--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,7 +1,17 @@
 $theme-primary-faint: rgba(157, 113, 65, 0.25);
 $theme-secondary-faint: rgba(120, 120, 120, 0.25);
 
-// the -v5's are the actual colors. Colors above them are the darker variants while those below lighter
+// the -v5's are the actual/main/primary colors. Colors above them are the darker variants while those below lighter variants
+
+// $primary-v1: rgb(61, 17, 0);
+// $primary-v2: rgb(85, 41, 0);
+// $primary-v3: rgb(109, 65, 17);
+// $primary-v4: rgb(133, 89, 41);
+// $primary-v5: rgb(157, 113, 65);
+// $primary-v6: rgb(181, 137, 89);
+// $primary-v7: rgb(205, 161, 113);
+// $primary-v8: rgb(229, 185, 137);
+// $primary-v9: rgb(253, 209, 161);
 
 $theme-primary: rgb(157, 113, 65); //supposed gold color
 $prim-r: 157;
