--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -2,6 +2,16 @@
 
 @import 'constants';
 
+@mixin before-or-after() {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
 html,
 body,
 #root {
@@ -78,7 +88,7 @@ input {
 }
 
 a {
-  color: $theme-primary-v8;
+  color: $theme-primary-v6;
 
   &:visited {
     color: $theme-primary-v9;
@@ -89,10 +99,11 @@ button,
 a {
   text-transform: unset !important;
   font-size: 1rem;
+  transition: 0.3s;
 
   &[class*='Primary'] {
     $bg: $theme-primary-v4;
-    $bg-hovered: $theme-primary-v3;
+    $bg-hovered: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
 
     min-height: 2.5rem;
     border-radius: 0.25rem;
@@ -113,12 +124,28 @@ a {
 
     &.outlined {
       border: 1px solid $bg;
-      background-color: transparent;
+      background: transparent;
       color: $theme-primary-v4;
+      position: relative;
+      overflow: hidden;
+
+      > * {
+        z-index: 1;
+      }
+
+      &::before {
+        @include before-or-after();
+        opacity: 0;
+        background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+        transition: 0.3s;
+      }
 
       &:hover {
-        background-color: $bg;
         color: white;
+
+        &::before {
+          opacity: 1;
+        }
       }
     }
 
