--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -116,6 +116,7 @@
   font-size: 0.9rem;
   color: white;
   background-color: $theme-primary-v4;
+  background-image: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
 }
 
 @keyframes fromBottom {
