--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -4,31 +4,65 @@ $products: (
   "three": "/images/three.jpg",
 );
 
-@each $i, $image in $products {
-  .Product-Wrapper-#{$i} {
-    //   height: 30rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    width: 100%;
-    background: linear-gradient(rgba(65, 20, 20, 0.5), rgba(31, 5, 5, 0.5)),
-      url($image);
-    object-fit: cover;
-    background-position: center;
-    line-height: 1.7;
-    // filter: blur(.9em);
-  }
-  .Product-Image-#{$i} {
-    background: url($image);
-    height: 15rem;
-    width: 15rem;
-    margin: 1rem;
-    object-fit: cover;
-    background-position: center;
-    border-radius: 50%;
-    box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.3);
-  }
-}
+// @each $i, $image in $products {
+//   .Product-Wrapper-#{$i} {
+//     //   height: 30rem;
+//     padding-top: 2rem;
+//     padding-bottom: 2rem;
+//     width: 100%;
+//     background: linear-gradient(rgba(65, 20, 20, 0.5), rgba(31, 5, 5, 0.5)),
+//       url($image);
+//     object-fit: cover;
+//     background-position: center;
+//     line-height: 1.7;
+//     // filter: blur(.9em);
+//   }
+//   .Product-Image-#{$i} {
+//     background: url($image);
+//     height: 15rem;
+//     width: 15rem;
+//     margin: 1rem;
+//     object-fit: cover;
+//     background-position: center;
+//     border-radius: 50%;
+//     box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.3);
+//   }
+// }
 
 .Main-Wrapper {
   width: 100% !important;
+  padding: 1em;
+  padding-top: 5em;
+  padding-bottom: 3em;
+}
+
+.Product-Card {
+  // padding: 10px;
+  background-color: $white;
+  border-radius: 1rem;
+  transition: ease-in-out 0.3s;
+  height: 20rem;
+  box-shadow: 0px 0px 17px 4px rgba(0, 0, 0, 0.15);
+}
+
+// .Service-Card:hover {
+//   transform: scale(1.01);
+//   box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.09);
+// }
+@each $i, $image in $products {
+  .Product-Image-#{$i} {
+    // padding: 10px;
+    height: 70%;
+    background: url($image);
+    background-position: center;
+    object-fit: cover;
+    border-radius: 1rem 1rem 0rem 0rem;
+
+    transition: .5s;
+  }
+  .Product-Image-#{$i}:hover {
+    // padding: 10px;
+    transform:  scale(1.03);
+    object-fit: cover;
+  }
 }
