--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -8,6 +8,21 @@
   box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.35);
 }
 
+.hide-mini-nav {
+  transform: translateY(-$top-nav-box-height);
+
+  .top-nav-box {
+    visibility: hidden;
+  }
+
+  .nav-link {
+    padding: {
+      top: 1.15rem;
+      bottom: 1.15rem;
+    }
+  }
+}
+
 .nav-toolbar {
   display: flex;
   visibility: visible;
@@ -77,7 +92,7 @@
   align-items: center;
   height: 100%;
   margin: 0 1rem;
-  padding: 1.5rem 0.5rem;
+  padding: 1.5rem 0.25rem;
   color: $theme-primary-v9;
   z-index: 2;
   text-transform: capitalize !important;
