--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -16,15 +16,15 @@
   .header-image {
     height: 0;
     position: absolute;
-    filter: drop-shadow(0.75rem 1.15rem 0 $theme-primary-v4);
+    filter: drop-shadow(0.75rem 1.15rem 0 $theme-primary-v8);
 
     @mixin for-both {
       @include before-or-after();
       top: -5rem;
       left: -5vw;
       width: 110vw;
-      height: 35rem;
-      clip-path: polygon(0 0, 100% 0, 100% 45%, 55% 45%, 40% 100%, 0 100%);
+      height: 35.5rem;
+      clip-path: polygon(0 0, 100% 0, 100% 45%, 56.5% 45%, 40% 100%, 0 100%);
       background: linear-gradient(
         to left,
         $theme-primary-v5,
@@ -77,11 +77,7 @@
     min-height: 15rem;
     padding: 13rem 0 5rem 0;
     position: static;
-    margin-bottom: 9rem;
-
-    .page-title {
-      font-weight: bold;
-    }
+    margin-bottom: 15rem;
 
     .intro-text {
       width: 19rem;
@@ -91,7 +87,7 @@
       right: 0;
       color: #333;
       box-shadow: 0 0.5rem 1.75rem rgba(0, 0, 0, 0.35);
-      line-height: 2rem;
+      line-height: 2.15rem;
       border-radius: 1.25rem;
       background: linear-gradient(to left, #111, #000);
       color: white;
@@ -125,6 +121,7 @@
     border-radius: 0;
     margin: 6rem 0;
     position: relative;
+    display: none;
 
     &::before {
       @include separator-circle();
@@ -159,10 +156,10 @@
           .work-image {
             opacity: 1;
             transform: translateX(0);
-            transition: 0.75s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+            transition: 0.75s;
           }
         }
-    
+
         .work-desc-wrapper {
           opacity: 1;
           transform: translateX(0);
@@ -174,10 +171,10 @@
           .work-image {
             opacity: 1;
             transform: translateX(0);
-            transition: 0.75s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+            transition: 0.75s;
           }
         }
-    
+
         .work-desc-container {
           .work-desc-wrapper {
             opacity: 1;
@@ -192,7 +189,7 @@
     .work-image-wrapper {
       .work-image {
         opacity: 0;
-        transform: translateX(-250%);
+        transform: translateX(-300%);
       }
     }
 
@@ -211,7 +208,7 @@
 
       .work-image {
         opacity: 0;
-        transform: translateX(250%);
+        transform: translateX(300%);
       }
     }
 
@@ -234,13 +231,28 @@
 
   .work-image {
     height: auto;
+    display: inline-block;
     width: 10rem;
     max-width: 100%;
     transition: 0.75s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   }
 
+  .no-image-placeholder {
+    $size: 10rem;
+
+    display: none;
+    width: $size;
+    height: $size;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    color: white;
+    background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+  }
+
   .work-desc-wrapper {
-    transition: 1s;
+    transition: 1.15s;
   }
 
   .work-desc-header {
