--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -80,9 +80,9 @@ input {
 a {
   color: $theme-primary-v6;
 
-  &:visited {
-    color: $theme-primary-v9;
-  }
+  // &:visited {
+  //   color: $theme-primary-v9;
+  // }
 }
 
 button,
