--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -103,17 +103,12 @@ $top-nav-box-height: 2.25rem;
   height: 100%;
   margin: 0 1rem;
   padding: 1.5rem 0.25rem;
-  color: $theme-primary-v9;
-  // color: #eee;
+  // color: $theme-primary-v9;
+  color: #eee;
   z-index: 2;
   text-transform: capitalize !important;
   transition: 0.3s;
   position: relative;
-
-  &:visited {
-    // color: #eee;
-    color: $theme-primary-v9;
-  }
 
   &::before,
   &::after {
@@ -136,14 +131,14 @@ $top-nav-box-height: 2.25rem;
     bottom: 0em;
     height: 0.125rem;
     transform: scale(0);
-    // border-bottom: 0.125rem solid white;
-    border-bottom: 0.125rem solid $theme-primary-v8;
+    border-bottom: 0.125rem solid white;
+    // border-bottom: 0.125rem solid $theme-primary-v8;
   }
 
   &:hover,
   &:focus {
     color: #fff !important;
-    // color: $theme-primary-v9;
+    // color: $theme-primary-v9 !important;
 
     &::before {
       width: calc(100% - 1em);
@@ -164,14 +159,14 @@ $top-nav-box-height: 2.25rem;
   }
 
   &.active {
-    color: white !important;
-    // color: $theme-primary-v9 !important;
+    // color: white !important;
+    color: $theme-primary-v9 !important;
 
     &::before {
       transform: scale(1);
       width: calc(100% - 1rem) !important;
-      border-bottom-color: #fff;
-      // border-bottom-color: $theme-primary-v8;
+      // border-bottom-color: #fff;
+      border-bottom-color: $theme-primary-v8;
     }
 
     .nav-icon {
