--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -159,14 +159,21 @@
     header {
       > div {
         padding: 0;
-        margin-top: 10rem;
-        margin-bottom: 6rem;
+        margin-top: 8.5rem;
+        margin-bottom: 7rem;
         text-align: center;
 
         &:nth-child(2) {
           text-align: center;
-          margin-bottom: 0;
+          margin: {
+            top: 10rem;
+            bottom: 0;
+          }
         }
+      }
+
+      .rider-text {
+        text-align: center;
       }
 
       .intro-text {
@@ -178,9 +185,15 @@
     }
 
     .work {
+      border: {
+        top-right-radius: 0;
+        bottom-right-radius: 0;
+      }
       display: block !important;
+      padding: 1rem;
 
       &::before {
+        
         left: calc(100% - (1.25rem / 2) - 0.025rem);
       }
 
@@ -204,11 +217,11 @@
 
     .work-desc-wrapper {
       text-align: center;
-      padding: 1.5rem;
-      padding: {
-        left: 0.5rem !important;
-        right: 1.5rem !important;
-      }
+      // padding: 1.5rem;
+      // padding: {
+      //   left: 0.5rem !important;
+      //   right: 1.5rem !important;
+      // }
     }
 
     .work-desc-header {
