Add updated portfolio data with dates; Try optimize page, fixing likely lag on Safari; Slightly modify show more/less feature and styles.

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -202,6 +202,10 @@ $top-nav-box-height: 2.25rem;
 
     &.active, &:hover {
       background-color: transparent;
+      border-color: $theme-primary-v8;
+    }
+
+    &:hover, &:focus {
       border-color: white;
     }
   }
@@ -381,6 +385,8 @@ $top-nav-box-height: 2.25rem;
 
   .top-nav-wrapper {
     flex-direction: column;
+    background: $theme-primary-v3;
+
     > div {
       margin: 0.5rem 0;
 
@@ -400,7 +406,7 @@ $top-nav-box-height: 2.25rem;
   .MuiDrawer-paper {
     width: 75%;
     overflow-x: hidden;
-    background: $theme-primary-v4;
+    background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
     max-width: 22rem;
   }
 }
