--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -151,7 +151,7 @@
 
       &::before,
       &::after {
-        height: 34rem;
+        height: 38rem;
         clip-path: unset;
       }
     }
@@ -159,14 +159,14 @@
     header {
       > div {
         padding: 0;
-        margin-top: 8.5rem;
+        margin-top: 9rem;
         margin-bottom: 7rem;
         text-align: center;
 
         &:nth-child(2) {
           text-align: center;
           margin: {
-            top: 10rem;
+            top: 12rem;
             bottom: 0;
           }
         }
@@ -190,16 +190,22 @@
         bottom-right-radius: 0;
       }
       display: block !important;
-      padding: 1rem;
+      padding: 1rem 1rem 2rem 1rem;
 
       &::before {
-        
         left: calc(100% - (1.25rem / 2) - 0.025rem);
       }
 
       &::after {
+        background: $theme-primary-v8;
+        z-index: 1;
         left: calc(100% - (0.125rem / 2) - 0.025rem);
       }
+    }
+
+    .work .work-date {
+      text-align: right;
+      padding: 1.5rem;
     }
 
     .work-image-wrapper {
