--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -23,8 +23,8 @@
       top: -5rem;
       left: -5vw;
       width: 110vw;
-      height: 39.5rem;
-      clip-path: polygon(0 0, 100% 0, 100% 45%, 60% 45%, 42.5% 100%, 0 100%);
+      height: 38.5rem;
+      clip-path: polygon(0 0, 100% 0, 100% 45%, calc(54vw + 9rem) 45%, calc(51vw - 3rem) 100%, 0 100%);
       background: linear-gradient(
         to left,
         $theme-primary-v5,
@@ -82,7 +82,7 @@
 
       &:nth-child(2) {
         text-align: right;
-        margin-top: 15rem;
+        margin-top: 14.5rem;
       }
     }
 
@@ -260,10 +260,10 @@
     z-index: 1;
     right: 0;
     padding: 1.5rem;
-    // padding-top: 1rem;
     background: white;
     bottom: 0;
     font-size: 2rem;
+    border-radius: inherit;
     color: $theme-primary-v8;
   }
 
